Bug 318943 - Menu bar show entry "No text"
Summary: Menu bar show entry "No text"
Status: RESOLVED FIXED
Alias: None
Product: krdc
Classification: Applications
Component: general (other bugs)
Version First Reported In: 4.10.2
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: Urs Wolfer
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-04-26 18:31 UTC by Remigio Conti
Modified: 2013-08-18 14:16 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.11.1
Sentry Crash Report:


Attachments
KRDC main window screenshot (see the menu bar with entry "No text") (131.38 KB, image/jpeg)
2013-04-30 19:47 UTC, Remigio Conti
Details
KRDC about dialog screenshot (30.83 KB, image/jpeg)
2013-04-30 19:48 UTC, Remigio Conti
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Remigio Conti 2013-04-26 18:31:18 UTC
KRDC version 4.10.2 from KUbuntu packages. 

The menù bar show two entry with "No text" title. The complete menù entries are:

No text   Session   Bookmarks  No text  Help

Regards 

Remigio

Reproducible: Always

Steps to Reproduce:
1. Open KRDC
2. Look at menù bar
Comment 1 Urs Wolfer 2013-04-30 10:16:23 UTC
What language are you using? I cannot reproduce this issue. Please provide a screenshot which also shows the about dialog of KRDC.
Comment 2 Remigio Conti 2013-04-30 19:47:13 UTC
Created attachment 79576 [details]
KRDC main window screenshot (see the menu bar with entry "No text")
Comment 3 Remigio Conti 2013-04-30 19:48:14 UTC
Created attachment 79577 [details]
KRDC about dialog screenshot
Comment 4 Remigio Conti 2013-04-30 19:56:06 UTC
I use KUbuntu 12.04.2 with KDE 4.10.2, OS language American English and locale country is set to Italy. This issue appeared after latest KDE/KRDC update.

Thanks for your support!
Comment 5 Urs Wolfer 2013-05-02 10:04:49 UTC
Thanks for your information. Can you reproduce this issue also with other KDE applications?
Comment 6 Remigio Conti 2013-05-07 15:44:11 UTC
Not in those that I use (Konsole, Ktorrent, Amarok, K3B etc.)
Comment 7 Heiko Zinke 2013-06-05 19:29:44 UTC
same here on gentoo amd64 with Version 4.10.2.

this happens always after I customize my toolbar.
steps to reproduce:
1) right click --> configure toolbar --> change something
2) quit and restart krdc

Removing the newly created file ~/.kde4/share/apps/krdc/krdcui.rc solves this problem. But of course I lose my changes.

so I blame `krdc(17269)/kdecore (KConfigSkeleton) KCoreConfigSkeleton::writeConfig:` but that's just guessing.
Comment 8 Jekyll Wu 2013-06-06 03:40:22 UTC
I can confirm the steps in comment #7.
Comment 9 Urs Wolfer 2013-06-08 13:43:14 UTC
Thanks for your investigations.
Comment 10 Urs Wolfer 2013-08-18 14:16:16 UTC
Git commit 0233f23b99095d641336fb6fad080b62852ddcc9 by Urs Wolfer.
Committed on 18/08/2013 at 14:07.
Pushed by uwolfer into branch 'KDE/4.11'.

fix broken menu bar after changing settings

- after editing, it displayed text 'No text' and some standard actions got lost
- simplify code (thanks a lot to Albert Astals Cid for fixing this bug the correct way)
FIXED-IN: 4.11.1

M  +1    -19   mainwindow.cpp
M  +0    -2    mainwindow.h

http://commits.kde.org/krdc/0233f23b99095d641336fb6fad080b62852ddcc9