fix broken menu bar after changing settings

- after editing, it displayed text 'No text' and some standard actions got lost
- simplify code (thanks a lot to Albert Astals Cid for fixing this bug the correct way)

BUG: 318943
FIXED-IN: 4.11.1